[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "uuid",
  "chrono",
  "migrate",
  "json",
  "bigdecimal",
  "ipnetwork",
] }
bigdecimal = "0.4"

proto = { path = "../proto", features = ["server"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
