[package]
name = "grpc-pki"
version = "0.1.0"
edition = "2024"

[dependencies]
pki = { path = "../pki" }
db = { path = "../db" }
proto = { path = "../proto", features = ["server"] }

uuid = { version = "1", features = ["v4"] }

tonic = { version = "0.12", features = ["tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = [
  "ring",
] }

tokio = { version = "1", features = ["fs"] }

thiserror = "1"
tracing = "0.1"
