[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }

tokio = { version = "1", features = ["time", "sync"] }

dashmap = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
