[package]
name = "policy-distributor"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
proto = { path = "../proto", features = ["server"] }

tokio = { version = "1", features = ["sync"] }

sha2 = { version = "0.10", features = ["std"] }
hex = "0.4"

serde_json = "1"

uuid = { version = "1", features = ["v4"] }

thiserror = "1"
tracing = "0.1"

futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
