[package]
name = "result-ingester"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
proto = { path = "../proto", features = ["server"] }

tokio = { version = "1", features = ["sync"] }

uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
